# mlops-github-actions

./: .gitignore  Makefile  README.md  SHOWCASE.md  generate_report.py  pyproject.toml  requirements.txt  setup.py  setup.sh
.github/workflows/: ci.yml  deploy-pages.yml  model-monitoring.yml  train.yml
configs/: config.yaml
docs/: index.html
docs/assets/: dashboard_data.json
docs/assets/css/: style.css
docs/assets/js/: dashboard.js
models/artifacts/: report_20260208_024743.txt  report_20260215_023448.txt  report_20260308_022804.txt  report_20260315_024151.txt  report_20260322_023350.txt  report_20260329_024408.txt
scripts/: run_training.py  update_dashboard.py
src/: __init__.py  evaluate.py  predict.py  validate_data.py
src/data/: __init__.py  loader.py  preprocessor.py  validator.py
src/models/: __init__.py  evaluator.py  trainer.py
src/pipelines/: __init__.py  inference_pipeline.py  training_pipeline.py
src/utils/: __init__.py  metrics_reporter.py
tests/: __init__.py  test_data.py  test_models.py  test_pipeline.py
